# Odin

Monografia/: .gitignore  documento.aux  documento.blg  documento.fdb_latexmk  documento.fls  documento.ist  documento.lof  documento.loq  documento.lot  documento.tex  documento.toc
Monografia/1-pre-textuais/: abstract.tex  agradecimentos.tex  epigrafe.tex  lista-de-abreviaturas-e-siglas.tex  lista-de-simbolos.tex  resumo.tex
Monografia/3-pos-textuais/: referencias.bib
Monografia/lib/: abntex2-alf.bst  preambulo.tex  ufersatex.sty
Monografia/textuais/: arquitetura-distribuida.tex  conclusao.tex  embasamento-teorico.tex  introducao.tex  middleware.tex  on-site-client.tex  processo-desenvolvimento.tex  resultados.tex  sistema-embarcado.tex  trabalhos-relacionados.tex
aircraft_crow/: .gitignore  CMakeLists.txt  README.md
aircraft_crow/.devcontainer/: devcontainer.json
aircraft_crow/domain/: CMakeLists.txt  system_state.hpp  telemetry_dto.hpp  telemetry_orchestrator.cpp  telemetry_orchestrator.hpp
aircraft_crow/main/: CMakeLists.txt  board_pinout_config.hpp  main.cpp  orchestrator_task.cpp  orchestrator_task.hpp  task_params.hpp
aircraft_crow/main/rtos_tasks/: task_acquisition.cpp  task_buzzer.cpp  task_lora_tx.cpp  task_pwm_logger.cpp  task_sd_logger.cpp
aircraft_crow/tests/: CMakeLists.txt  consumer_uart_hil_task.cpp  consumer_uart_hil_task.hpp  producer_uart_hil_task.cpp  uart_hil_task.cpp  (+2 more)
crow_hub/: CMakeLists.txt
odin_ground_station/: crow_telemetry.xml  main.py  mavlink.py  requirements.txt
shoulder_middleware/: .gitignore  CMakeLists.txt
(+108 files in other folders)
